# pytorch-toolkit

./: .gitignore  README.md  pyproject.toml
notebooks/linear_regression/: linear_regression.ipynb
notebooks/logistic_regression/: logistic_regression.ipynb
notebooks/neural_networks/: nn_for_classification.ipynb
