[project]
name = "pytorch"
version = "0.1.0"
description = "PyTorch Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "sympy>=1.14.0",
    "torch>=2.9.0",
    "typing-extensions>=4.15.0",
]
